# simde

./: .all-contributorsrc  .appveyor.yml  .azure-pipelines.yml  .cirrus.yml  .codecov.yml  .dir-locals.el  .dockerignore  .drone.star  .drone.star.disabled  .drone.yml  .editorconfig  .gitignore  .gitmodules  .mailmap  .no-test-readme.md  .packit.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.s390x  Makefile  README.md  amalgamate.py  cloud-v-pipeline  cloud-v-pipeline-k230  codecov.yml  hedley.h  meson.build  meson_options.txt  mmx.h  native-calls.c  netlify.toml  package_simde.py  riscv64-cross.txt  simde-arch.h  simde-common.h  sse.h  sse2.h  sse3.h  sse4.1.h  (+3 more)
.circleci/: config.yml
.cloud-v/: Makefile  cloud-v-pipeline
.github/workflows/: actionlint.yml  ci.yml  cmake.yml  codeql-analysis.yml  deploy.yml  gcc-snapshot.yml  msvc-arm.yml  ossar-analysis.yml  pr-cleanup.yml  push-to-no-tests.yml
.no-test/: README.md
.packit/: README.md  ci.sh  simde.spec
.semaphore/: semaphore.yml
docker/: Dockerfile  Dockerfile-unstable  Dockerfile.ubuntu  Dockerfile.ubuntu_bionic  README.md  simde-dev.sh
docker/cross-files/: aarch64+sve-clang-10.cross  aarch64+sve-clang-11.cross  aarch64+sve-clang-12.cross  aarch64+sve-clang-13.cross  aarch64+sve-clang-14.cross  aarch64+sve-clang-15.cross  aarch64+sve-gcc-10.cross  aarch64+sve-gcc-11.cross  aarch64+sve-gcc-12.cross  (+335 more)
simde/: check.h  check.h.gch  debug-trap.h  hedley.h  simde-aes.h  simde-align.h  simde-arch.h  simde-bf16.h  simde-common.h  simde-complex.h  simde-constify.h  simde-detect-clang.h  simde-diagnostic.h  simde-f16.h  simde-features.h  simde-math.h
test/: .gitignore  .travis.sh  CMakeLists.txt  Makefile  arm64cl.txt  check-flags.sh  compare.c  declare-suites.h  download-iig.sh  download-sde.py  download-sde.sh  meson.build  native-aliases.sh  run-tests.c  run-tests.h  test-cmp-mmx.c  test-cmp-sse.c  test-cmp-sse2.c  test-cmp.c  test-cmp.h  test-common.c  test-mmx.c  test-skel.c  test-sse.c  test-sse2.c  test-sse3.c  test-sse4.1.c  test-sse4.2.c  test-ssse3.c  test-test.c  test.c  test.h
test/arm/: arm-internal.h  declare-suites.h  meson.build  run-tests.c  run-tests.h  test-arm-internal.h  test-arm.c  test-arm.h
test/arm/neon/: A64_change2.txt  __crc32.c  aba.c  abal.c  abal_high.c  abd.c  abdl.c  abdl_high.c  abs.c  add.c  add_testgen.py  addhn.c  addhn_high.c  addl.c  addl_high.c  addlv.c  addv.c  addw.c  addw_high.c  aes.c  and.c  bcax.c  bic.c  bsl.c  cadd_rot270.c  cadd_rot90.c  cage.c  cagt.c  cale.c  calt.c  ceq.c  ceqz.c  cge.c  cgez.c  cgt.c  cgtz.c  cle.c  clez.c  cls.c  clt.c  (+275 more)
test/arm/sve/: add.c  and.c  cmplt.c  declare-suites.h  dup.c  dup_n.c  meson.build  qadd.c  run-tests-neon.h  run-tests.c  run-tests.h  sel.c  sub.c  test-sve-footer.h  test-sve.h
test/cmake/: AddCompilerFlags.cmake  ExtraWarningFlags.cmake  toolchain-aarch64-linux-gnu.cmake  toolchain-arm-linux-gnueabihf.cmake
test/cmake-packaging/: CMakeLists.txt
test/cmake-packaging/cmake-fetchcontent/: CMakeLists.txt  main.c  main.cpp
test/cmake-packaging/cmake-fetchcontent-zip/: CMakeLists.txt
test/cmake-packaging/cmake-find-package/: CMakeLists.txt  main.c
test/cmake-packaging/sources/: main.c  main.cpp
test/common/: common.c  meson.build
test/docker/: Dockerfile.Ubuntu1404  Dockerfile.Ubuntu1604  Dockerfile.Ubuntu1804  Dockerfile.arm64  Dockerfile.arm7  Dockerfile.icc  Dockerfile.mipsel  Dockerfile.ppc64el  Dockerfile.qemu5.s390x  Dockerfile.s390x
test/mips/: declare-suites.h  meson.build  run-tests.c  run-tests.h
test/mips/msa/: add_a.c  adds.c  adds_a.c  addv.c  addvi.c  and.c  andi.c  declare-suites.h  ld.c  madd.c  meson.build  run-tests-msa.h  run-tests.c  run-tests.h  st.c  subv.c  test-msa-footer.h  test-msa.h
test/simd-js/: compare.c  float32x4.c  int32x4-compare.c  int32x4.c  simd-js.c  simd-js.h  skel.c
test/wasm/: abs.c  add.c  add_sat.c  add_saturate.c  all_true.c  and.c  andnot.c  any_true.c  avgr.c  bitmask.c  bitselect.c  ceil.c  convert.c  declare-suites.h  demote.c  div.c  dot.c  eq.c  extadd_pairwise.c  extend_high.c  extend_low.c  extmul_high.c  extmul_low.c  extract_lane.c  floor.c  ge.c  gt.c  le.c  load.c  load_lane.c  load_splat.c  load_zero.c  lt.c  make.c  max.c  meson.build  min.c  mul.c  narrow.c  ne.c  (+30 more)
test/wasm/relaxed-simd/: blend.c  declare-suites.h  fma.c  fms.c  laneselect.c  madd.c  max.c  meson.build  min.c  nmadd.c  run-tests-wasm.h  run-tests.c  run-tests.h  swizzle.c  test-relaxed-simd-footer.h  test-relaxed-simd.h  trunc.c
test/wasm/simd128/: abs.c  add.c  add_sat.c  all_true.c  and.c  andnot.c  any_true.c  avgr.c  bitmask.c  bitselect.c  ceil.c  const.c  convert.c  declare-suites.h  demote.c  div.c  dot.c  eq.c  extadd_pairwise.c  extend_high.c  extend_low.c  extmul_high.c  extmul_low.c  extract_lane.c  floor.c  ge.c  gt.c  le.c  load.c  load_lane.c  load_splat.c  load_zero.c  lt.c  make.c  max.c  meson.build  min.c  mul.c  narrow.c  ne.c  (+27 more)
test/x86/: aes.c  avx.c  avx2.c  avx512bw.c  avx512cd.c  avx512dq.c  avx512f.c  avx512vl.c  bmi.c  clmul.c  compare.h  declare-suites.h  f16c.c  fma.c  gfni.c  meson.build  mmx.c  run-tests.c  run-tests.h  skel.c  sse.c  sse2.c  sse3.c  sse4.1.c  sse4.2.c  ssse3.c  svml.c  test-avx.h  test-avx512.h  test-mmx.h  test-sse.h  test-sse2.h  test-test-x86.c  test-x86-footer.h  test-x86-internal.h  test-x86.c  test-x86.h  x86-internal.h  xop.c
test/x86/avx/: avx.c
test/x86/avx2/: avx2.c
test/x86/avx512/: 2intersect.c  4dpwssd.c  4dpwssds.c  abs.c  add.c  adds.c  align.c  and.c  andnot.c  avg.c  bitshuffle.c  blend.c  broadcast.c  cast.c  cmp.c  cmpeq.c  cmpge.c  cmpgt.c  cmple.c  cmplt.c  cmpneq.c  compress.c  conflict.c  copysign.c  cvt.c  cvts.c  cvtt.c  cvtus.c  dbsad.c  declare-suites.h  div.c  dpbf16.c  dpbusd.c  dpbusds.c  dpwssd.c  dpwssds.c  expand.c  expandloadu.c  extract.c  fixupimm.c  (+88 more)
test/x86/fma/: fma.c
test/x86/mmx/: compare.c  mmx.c
test/x86/sse/: compare.c  sse.c
test/x86/sse2/: compare.c  sse2.c
test/x86/sse3/: sse3.c
test/x86/sse4.1/: sse4.1.c
test/x86/sse4.2/: sse4.2.c
test/x86/ssse3/: ssse3.c
(+459 files in other folders)
